--- a/css/style.css
+++ b/css/style.css
@@ -21,6 +21,7 @@ a{text-decoration: none; color: #333;}
     line-height: 3;
     width: 200px; height: 650px;
     background-color: #fff;
+    border: 1px solid #ccc;
     }
 .d1a{
     font-size: 20px;
@@ -63,4 +64,64 @@ a{text-decoration: none; color: #333;}
 #slider li.show{
     opacity: 1;
     visibility: visible;
+}
+
+/*content*/
+.content > div{width: 33.333%;}
+.content  h3{
+    line-height: 2;
+    cursor: pointer;
+    padding: 10px;
+}
+.content  h3:hover {background-color: pink;}
+.content ul {padding: 0 10px;}
+.notice li{
+    white-space: nowrap;
+    font-size: 16px;
+    width: 250px;
+    display: flex;
+    line-height: 2;
+
+}
+.notice li:hover a{font-weight: bold;}
+.notice a{
+    display: inline-block;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+}
+
+.gallery img{
+    width: 90%;
+}
+#ft{background-color: #ccc;}
+.copy{width: 70%; text-align: center;}
+.ftright{
+    padding-left: 50px;
+    line-height: 2;
+}
+.familySite{
+    padding: 0 10px;}
+
+/*popup*/
+.popup{
+    top:50%;
+    left:50%;
+    transform: translate(-50%,-50%);
+    width: 400px;
+    padding: 10px;
+    background-color: white;
+    border: 1px solid black;
+    line-height: 2;
+    text-align: center;
+    z-index: 999;
+}
+.popup button{float: right; padding: 0 10px;}
+.modal{
+    position: fixed;
+    width: 100%;
+    height: 100%;
+    opacity: 0.5;
+    background-color: black;
+    z-index: 998;
 }
